--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^4.5.2",
+        "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
-        "daisyui": "^3.9.4",
+        "daisyui": "^4.4.19",
         "laravel-vite-plugin": "^0.8.0",
+        "postcss": "^8.4.32",
         "tailwindcss": "^3.3.5",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.14",
+        "vue": "^3.3.11"
     }
 }
