--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@iconify/vue": "^4.1.2",
         "@vitejs/plugin-vue": "^4.5.2",
         "autoprefixer": "^10.4.16",
         "axios": "^1.1.2",
